# sokoban-rust

./: Cargo.toml
data/: entity_data.json  settings.json
resources/images/pack/Vector/: Sokoban.swf
resources/levels/: level_0.json  level_1.json  level_2.txt  level_3.txt  level_4.txt
resources/maps/: map_0.txt  map_0_new.txt  map_1.txt
src/: components.rs  constant.rs  entities.rs  entity_builder.rs  game.rs  game_context.rs  levels.rs  main.rs
src/resources/: component_template_data.rs  game_state.rs  game_vars.rs  input_queue.rs  level_data.rs  mod.rs  sound_library.rs  timer.rs  var.rs
src/systems/: gameplay_state_system.rs  input_system.rs  mod.rs  rendering_system.rs
