[package]
name = "rust-sokoban"
version = "0.2.0"
authors = ["Thanh Nguyen <thanhqng1510@gmail.com>", "Ly Nguyen <thaolygoat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
specs = { version = "0.16.1", features = ["specs-derive"] }
strfmt = "0.1.6"
lazy_static = "1.4.0"
